[project]
name = "elementor-snaps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.1",
    "pillow>=10.4.0",
    "playwright>=1.47.0",
    "rich>=13.8.1",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "aider-chat>=0.58.1",
]
