[project]
name = "elementor-snaps"
version = "0.1.0"
description = "A CLI tool to take screenshots of Elementor pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.1",
    "pillow>=10.4.0",
    "playwright>=1.47.0",
    "rich>=13.8.1",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "aider-chat>=0.58.1",
    "ruff>=0.6.8",
]

[project.scripts]
elementor_snaps = "elementor_snaps.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
